--- a/boilerplate/App/Sagas/LoginSagas.js.ejs
+++ b/boilerplate/App/Sagas/LoginSagas.js.ejs
@@ -25,6 +25,12 @@ export function * login (api) {
   if (authInfo.ok) {
     const { issuer, clientId, scope } = authInfo.data
     const issuerInfo = yield call(api.getOauthIssuerInfo, issuer)
+    if (!issuerInfo.ok) {
+      // note if you are on android, localhost resolves to the device and not your computer
+      alert(`Unable to fetch auth from issuer ${issuer}`) // eslint-disable-line no-undef
+      yield put(LoginActions.loginFailure('WRONG'))
+      return
+    }
     const authorizationEndpoint = issuerInfo.data['authorization_endpoint']
 
     const nonce = generateNonce()
