--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -59,7 +59,7 @@
     "@storybook/channels": "3.4.10",
     "@storybook/react-native": "3.4.10",
     "@babel/core": "7.0.0",
-    "babel-core": "npm:@babel/core",
+    "babel-core": "7.0.0-bridge.0",
     "babel-plugin-ignite-ignore-reactotron": "0.3.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-react-native": "5.0.2",
