--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -100,6 +100,9 @@
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
     },
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|tcomb-form-native)"
+    ],
     "coveragePathIgnorePatterns": [
       "App/Services/Api.js",
       "App/Themes/",
