--- a/boilerplate/App/Containers/DrawerContent.js.ejs
+++ b/boilerplate/App/Containers/DrawerContent.js.ejs
@@ -6,7 +6,7 @@ import { Navigation } from 'react-native-navigation'
 import styles from './Styles/DrawerContentStyles'
 import { Images } from '../Themes'
 import DrawerButton from '../Components/DrawerButton'
-import { loginScreen, registerScreen, forgotPasswordScreen, changePasswordScreen, settingsScreen, entitiesScreen } from '../Navigation/Layouts'
+import { <% if (props.authType !== 'oauth2') { %>loginScreen, registerScreen, forgotPasswordScreen, changePasswordScreen, settingsScreen, <% } %><% if (props.websockets) { %>chatScreen, <% } %>entitiesScreen } from '../Navigation/Layouts'
 import { connect } from 'react-redux'
 import LoginActions from '../Redux/LoginRedux'
 import { isLoggedIn } from '../Redux/AccountRedux'
