add xcode_10_setup.js to fix "react-native run-ios"

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,7 +21,8 @@
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     <%_ } _%>
-    "storybook": "storybook start -p 7007"
+    "storybook": "storybook start -p 7007",
+    "postinstall": "node xcode_10_setup.js"
   },
   "dependencies": {
     "apisauce": "0.16.0",
