--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -38,7 +38,7 @@
     "redux-persist": "5.10.0",
     "redux-saga": "0.16.0",
     "reduxsauce": "1.0.0",
-    "react-native-navigation": "2.0.2571",
+    "react-native-navigation": "2.1.3-snapshot.33",
     "seamless-immutable": "7.1.4",
     <%_ if (props.socialLogin) { _%>
     "react-native-simple-auth": "2.2.0",
