--- a/boilerplate/app/shared/sagas/index.js.ejs
+++ b/boilerplate/app/shared/sagas/index.js.ejs
@@ -11,7 +11,7 @@ import { AccountTypes } from '../../shared/reducers/account.reducer'
 import { RegisterTypes } from '../../modules/account/register/register.reducer'
 import { ForgotPasswordTypes } from '../../modules/account/password-reset/forgot-password.reducer'
 import { ChangePasswordTypes } from '../../modules/account/password/change-password.reducer'
-import { UserTypes } from '../shared/reducers/user.reducer'
+import { UserTypes } from '../../shared/reducers/user.reducer'
 // ignite-jhipster-saga-redux-import-needle
 
 /* ------------- Sagas ------------- */
