--- a/templates/entity/entity-detail-screen.js.ejs
+++ b/templates/entity/entity-detail-screen.js.ejs
@@ -3,7 +3,7 @@ import { Alert, ScrollView, Text } from 'react-native'
 import { connect } from 'react-redux'
 import { Actions as NavigationActions } from 'react-native-router-flux'
 <%_ if (props.entityContainsLocalDate) { _%>
-import { jsDateToLocalDate } from '../Transforms/DateTransforms'
+import { jsDateToLocalDate } from '../../../shared/util/date-transforms'
 <%_ } _%>
 
 import <%= props.name %>Actions from './<%= props.kebabName %>.reducer'
