--- a/boilerplate/test/setup.js.ejs
+++ b/boilerplate/test/setup.js.ejs
@@ -1,6 +1,6 @@
 import { configure } from 'enzyme'
 import Adapter from 'enzyme-adapter-react-16'
-import Config from '../App/Config/DebugConfig'
+import Config from '../app/config/debug-config'
 
 Config.useReactotron = false
 configure({ adapter: new Adapter() })
