--- a/boilerplate/index.js.ejs
+++ b/boilerplate/index.js.ejs
@@ -1,5 +1,5 @@
 import './app/config'
-import { registerScreensAndStartApp } from './App/Navigation/Layouts'
+import { registerScreensAndStartApp } from './app/navigation/layouts'
 
 // this registers the screens and starts the react-native-navigation process
 registerScreensAndStartApp()
