generate jhipster backend and ignite-jhipster app on macOS
in preparation for #55

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -1,6 +1,7 @@
 {
   "name": "<%= props.name %>",
   "createdWith": "<%= props.igniteVersion %>",
+  "boilerplate": "ignite-jhipster",
   "examples": "classic",
   "jhipsterDirectory": "<%= props.jhipsterDirectory %>",
   "authType": "<%= props.authType %>",
