--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -68,6 +68,10 @@
     "enzyme-adapter-react-16": "1.3.1",
     "ignite-jhipster": "<%= props.packageVersion %>",
     "jest": "23.5.0",
+    <%_ if (props.detox) { _%>
+    "detox": "9.0.6",
+    "mocha": "5.2.0",
+    <%_ } _%>
     "mockery": "2.1.0",
     "react-dom": "16.4.2",
     "react-test-renderer": "16.4.2",
@@ -128,6 +132,37 @@
     "ignore": [
       "ignite/**"
     ]
+  },
+  <%_ } _%>
+  <%_ if (props.detox) { _%>
+  "detox": {
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/<%= props.name %>.app",
+        "build": "xcodebuild -project ios/<%= props.name %>.xcodeproj -scheme <%= props.name %> -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone X"
+      },
+      "ios.sim.release": {
+        "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/<%= props.name %>.app",
+        "build": "export RCT_NO_LAUNCH_PACKAGER=true && xcodebuild -project ios/<%= props.name %>.xcodeproj -scheme <%= props.name %> -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone X"
+      },
+      "android.emu.debug": {
+        "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+        "build": "pushd android && ./gradlew app:assembleDebug && popd",
+        "type": "android.emulator",
+        "name": "Nexus_5X_API_28_x86"
+      },
+      "android.emu.release": {
+        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+        "build": "pushd android && ./gradlew app:assembleRelease && popd",
+        "type": "android.emulator",
+        "name": "Nexus_5X_API_28_x86"
+      }
+    },
+    "test-runner": "mocha"
   },
   <%_ } _%>
   "config": { }
