upgrade to react-native v0.57.5
remove xcode_10_setup

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -21,8 +21,7 @@
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     <%_ } _%>
-    "storybook": "storybook start -p 7007",
-    "postinstall": "node xcode_10_setup.js"
+    "storybook": "storybook start -p 7007"
   },
   "dependencies": {
     "apisauce": "0.16.0",
