--- a/templates/react-native-navigation/AppDelegate.m.ejs
+++ b/templates/react-native-navigation/AppDelegate.m.ejs
@@ -24,4 +24,20 @@
 
   return YES;
 }
+
+- (BOOL)application:(UIApplication *)application
+  openURL:(NSURL *)url
+  options:(NSDictionary<UIApplicationOpenURLOptionsKey,id> *)options
+{
+  return [RCTLinkingManager application:application openURL:url options:options];
+}
+
+- (BOOL)application:(UIApplication *)application continueUserActivity:(NSUserActivity *)userActivity
+  restorationHandler:(void (^)(NSArray * _Nullable))restorationHandler
+{
+  return [RCTLinkingManager application:application
+  continueUserActivity:userActivity
+  restorationHandler:restorationHandler];
+}
+
 @end
