--- a/boilerplate/test/spec/modules/login/login.sagas.spec.js.ejs
+++ b/boilerplate/test/spec/modules/login/login.sagas.spec.js.ejs
@@ -4,27 +4,20 @@ import { call, put<% if (props.authType === 'jwt' || props.authType === 'oauth2'
 import { login, logout<% if (props.authType === 'jwt' || props.authType === 'oauth2') { %>, loginLoad, selectAuthToken<% } %> } from '../../../../app/modules/login/login.sagas'
 import LoginActions from '../../../../app/modules/login/login.reducer'
 import AccountActions from '../../../../app/shared/reducers/account.reducer'
-<%_ if (props.authType === 'oauth2') { _%>
-var reference = require('../../../../app/shared/util/generate-nonce')
-reference.generateNonce = function () {
-  return 'test-nonce'
-}
-<%_ } _%>
 
 const stepper = (fn) => (mock) => fn.next(mock).value
 
 test('login success path', () => {
   <%_ if (props.authType === 'oauth2') { _%>
   const oauthInfo = FixtureAPI.getOauthInfo()
-  const oauthIssuerInfo = FixtureAPI.getOauthIssuerInfo()
   const step = stepper(login(FixtureAPI, oauthInfo))
   const sampleOauthResponse = {
-    'url': 'oidcapp://authorize#state=test-nonce&id_token=test-id-token&access_token=test-access-token&token_type=bearer&session_state=6d5b0148-979a-4ff9-b56d-77af3111f72a&expires_in=900&not-before-policy=0'
+    accessToken: 'test-access-token',
+    refreshToken: 'test-refresh-token'
   }
   expect(step(oauthInfo)).toEqual(call(FixtureAPI.getOauthInfo))
-  expect(step(oauthInfo)).toEqual(call(FixtureAPI.getOauthIssuerInfo, oauthInfo.data.issuer))
   // await the response from the oauth2 issuer
-  step(oauthIssuerInfo)
+  step(oauthInfo)
   expect(step(sampleOauthResponse)).toEqual(call(FixtureAPI.setAuthToken, 'test-access-token'))
   expect(step()).toEqual(put(LoginActions.loginSuccess('test-access-token')))
   // Request the account details
@@ -68,22 +61,6 @@ test('login success path', () => {
   expect(step()).toEqual(put({ type: 'RELOGIN_OK' }))
   <%_ } _%>
 })
-<%_ if (props.authType === 'oauth2') { _%>
-test('login failure from bad nonce path', () => {
-  const oauthInfo = FixtureAPI.getOauthInfo()
-  const oauthIssuerInfo = FixtureAPI.getOauthIssuerInfo()
-  const step = stepper(login(FixtureAPI, oauthInfo))
-
-  expect(step(oauthInfo)).toEqual(call(FixtureAPI.getOauthInfo))
-  expect(step(oauthInfo)).toEqual(call(FixtureAPI.getOauthIssuerInfo, oauthInfo.data.issuer))
-  const sampleOauthResponse = {
-    'url': 'oidcapp://authorize#state=test-wrong-nonce&id_token=test-id-token&access_token=test-access-token&token_type=bearer&session_state=6d5b0148-979a-4ff9-b56d-77af3111f72a&expires_in=900&not-before-policy=0'
-  }
-  // await the response from the oauth2 issuer
-  step(oauthIssuerInfo)
-  expect(step(sampleOauthResponse)).toEqual(put(LoginActions.loginFailure('WRONG')))
-})
-<%_ } _%>
 test('login failure path', () => {
   <%_ if (props.authType === 'oauth2') { _%>
   const response = FixtureAPI.getOauthInfo()
