--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -68,6 +68,9 @@
     "enzyme-adapter-react-16": "1.3.1",
     "ignite-jhipster": "<%= props.packageVersion %>",
     "jest": "23.5.0",
+    <%_ if (props.authType === 'oauth2') { _%>
+    "react-native-app-auth": "4.0.0",
+    <%_ } _%>
     <%_ if (props.detox) { _%>
     "detox": "9.1.2",
     "mocha": "5.2.0",
