--- a/templates/react-native-navigation/AppDelegate.m.ejs
+++ b/templates/react-native-navigation/AppDelegate.m.ejs
@@ -25,13 +25,6 @@
   return YES;
 }
 
-- (BOOL)application:(UIApplication *)application
-  openURL:(NSURL *)url
-  options:(NSDictionary<UIApplicationOpenURLOptionsKey,id> *)options
-{
-  return [RCTLinkingManager application:application openURL:url options:options];
-}
-
 - (BOOL)application:(UIApplication *)application continueUserActivity:(NSUserActivity *)userActivity
   restorationHandler:(void (^)(NSArray * _Nullable))restorationHandler
 {
@@ -39,5 +32,19 @@
   continueUserActivity:userActivity
   restorationHandler:restorationHandler];
 }
-
+<%_ if (props.authType === 'oauth2') { _%>
+- (BOOL)application:(UIApplication *)application
+  openURL:(NSURL *)url
+  options:(NSDictionary<NSString *, id> *)options
+{
+  return [self.authorizationFlowManagerDelegate resumeExternalUserAgentFlowWithURL:url];
+}
+<%_ } else { _%>
+- (BOOL)application:(UIApplication *)application
+  openURL:(NSURL *)url
+  options:(NSDictionary<UIApplicationOpenURLOptionsKey,id> *)options
+{
+  return [RCTLinkingManager application:application openURL:url options:options];
+}
+<%_ } _%>
 @end
