--- a/boilerplate/app/shared/sagas/index.js.ejs
+++ b/boilerplate/app/shared/sagas/index.js.ejs
@@ -17,7 +17,7 @@ import { UserTypes } from '../../shared/reducers/user.reducer'
 /* ------------- Sagas ------------- */
 
 import { startup } from './startup.saga'
-import { login, logout<% if (props.socialLogin) { %>, socialLogin<% } %><% if (props.authType === 'jwt' || props.authType === 'oauth2') { %>, loginLoad<% } %> } from '../../modules/login/login.sagas'
+import { login, logout<% if (props.authType === 'jwt' || props.authType === 'oauth2') { %>, loginLoad<% } %> } from '../../modules/login/login.sagas'
 import { register } from '../../modules/account/register/register.sagas'
 import { forgotPassword } from '../../modules/account/password-reset/forgot-password.sagas'
 import { changePassword } from '../../modules/account/password/change-password.sagas'
@@ -43,9 +43,6 @@ export default function * root () {
     takeLatest(LoginTypes.LOGIN_LOAD, loginLoad, api),
     <%_ } _%>
     takeLatest(LoginTypes.LOGIN_REQUEST, login, api),
-    <%_ if (props.socialLogin) { _%>
-    takeLatest(LoginTypes.SOCIAL_LOGIN_REQUEST, socialLogin, api),
-    <%_ } _%>
     takeLatest(LoginTypes.LOGOUT_REQUEST, logout, api),
     takeLatest(RegisterTypes.REGISTER_REQUEST, register, api),
     takeLatest(ForgotPasswordTypes.FORGOT_PASSWORD_REQUEST, forgotPassword, api),
