add entity creation e2e tests

--- a/boilerplate/ignite.json.ejs
+++ b/boilerplate/ignite.json.ejs
@@ -7,6 +7,7 @@
   "authType": "<%= props.authType %>",
   "searchEngine": <%= props.searchEngine %>,
   "websockets": <%= props.websockets %>,
+  "detox": <%= props.detox %>,
   "askToOverwrite": false,
   "generators": {
     "entity": "ignite-jhipster",
